# matrix-web

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  USAGE.md  config.example.yaml
.github/workflows/: docker-publish.yml
src/: bot.rs  config.rs  credentials.rs  main.rs  web.rs
static/: index.html
