[package]
name = "matrix-web"
version = "0.1.0"
edition = "2021"

[dependencies]
matrix-sdk = { version = "0.7", features = ["e2e-encryption"] }
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]
